# vfbLib-rust

./: .gitignore  Cargo.toml  FILEFORMAT.md  README.md
vfb-macros/: Cargo.toml
vfb-macros/src/: lib.rs
vfb-reader/: Cargo.toml
vfb-reader/src/: buffer.rs  entries.rs  entry.rs  entry_ref.rs  error.rs  glyph.rs  guides.rs  header.rs  lib.rs  main.rs  names.rs  postscript.rs  truetype.rs  vfb_constants.rs
vfb-reader/src/entries/: encoding.rs  string.rs  uint16.rs
