[package]
name = "vfbreader"
version = "0.1.0"
license = "GPL-3.0-linking-source-exception"
authors = ["Jens Kutilek <webmail@kutilek.de>"]
repository = "https://github.com/jenskutilek/vfbLib-rust"
description = "Library for handling FontLab Studio 5 VFB files"
edition = "2021"
categories = ["parsing"]
readme = "README.md"

[dependencies]
hex = "0.4.3"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
