[package]
name = "vfbreader"
version = "0.1.0"
license = "GPL-3.0-linking-source-exception"
authors = ["Jens Kutilek <webmail@kutilek.de>"]
repository = "https://github.com/jenskutilek/vfbLib-rust"
description = "Library for handling FontLab Studio 5 VFB files"
edition = "2021"
categories = ["parsing"]
readme = "README.md"

[dependencies]
encoding_rs = "0.8.35"
error-stack = "0.4.1"
hex = "0.4.3"
thiserror = "2.0.12"
phf = { version = "0.12.1", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
vfb-macros = { path = "../vfb-macros" }
font-types = { version = "0.10.1", features = ["serde"] }
bitflags = { version = "2.10.0", features = ["serde"] }
log = "0.4.29"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
